tests/ui/associated-types/associated-types-overridden-binding-2.stderr
error[E0271]: expected `IntoIter<u32>` to be an iterator that yields `i32`, but it yields `u32`
  --> $DIR/associated-types-overridden-binding-2.rs:6:43
   |
LL |     let _: &dyn I32Iterator<Item = u32> = &vec![42].into_iter();
   |                                           ^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |
   = note: required for the cast from `&std::vec::IntoIter<u32>` to `&dyn Iterator<Item = u32, Item = i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
